# hackerrank-framework

./: .clang-format  CMakeLists.txt  README.md  end_to_end_tests.cpp  main.cpp  solution.hpp
scripts/: build_all.sh  run_e2e.sh
test_cases/: 01_out.txt  02_in.txt
